2007-08-02 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSWorkspace.m: ([-launchedApplications]) check that each app
	is still responding if it's more than 30 seconds since the last check.

2007-07-31 Fred Kiefer <FredKiefer@gmx.de>
	
	* Headers/AppKit/NSColorPanel.h: Add constant for
	NSCrayonModeColorPanel. 
	* Headers/AppKit/NSComboBox.h,
	* Source/NSComboBox.m: Add MacOSX 10.3 methods.
	* Headers/AppKit/NSComboBoxCell.h,
	* Source/NSComboBoxCell.m: Add MacOSX 10.3 methods.

2007-07-31 Fred Kiefer <FredKiefer@gmx.de>
	
	* Headers/AppKit/NSColorSpace.h,
	* Source/NSColorSpace.m: New files.
	* GNUMakefile: Add NSColorSpace.
	* Headers/AppKit/NSColor.h,
	* Source/NSColor.m: Add MacOSX 10.4 methods.
	Code mostly by Nikolaus Schaller <hns@computer.org>.

2007-07-28 Fred Kiefer <FredKiefer@gmx.de>
	
	* Headers/AppKit/NSBrowser.h,
	* Source/NSBrowser.m: Add MacOSX 10.3 methods and constants.
	* Source/externs.m: Define new string constant.

2007-07-27 Fred Kiefer <FredKiefer@gmx.de>
	
	* Headers/AppKit/NSBox.h, 
	* Source/NSBox.m: Add methods and ivar for box type and
	encode/decode it.

2007-07-26 Fred Kiefer <FredKiefer@gmx.de>
	
	* Headers/AppKit/NSBitmapImageRep.h,
	* Source/NSBitmapImageRep.m: Add MacOSX 10.4 methods and constants.
	Code mostly by Nikolaus Schaller <hns@computer.org>.
	* Source/externs.m: Enable new string constant.

2007-07-25 Fred Kiefer <FredKiefer@gmx.de>
	
	* Headers/AppKit/NSApplication.h: Correct comment.
	* Source/NSApplication.m: Add error presenting methods.

2007-07-24 Fred Kiefer <FredKiefer@gmx.de>
	
	* Headers/AppKit/NSApplication.h,
	* Source/NSApplication.m: Add MacOSX 10.4 method declarations.
	* Source/externs.m: Define new string constant.

2007-07-23 Fred Kiefer <FredKiefer@gmx.de>
	
	* Headers/AppKit/NSAnimation.h: Remove unneeded includes.
	* Headers/Additions/GNUstepGUI/GSAnimator.h: Correct line endings.
	* Source/GSAnimator.m: Correct line endings and coding style.

2007-07-23 Fred Kiefer <FredKiefer@gmx.de>
	